2.2.1
 - FN-9566 Fix bug in frontend initialization code present in some PS frontend themes

2.2.0
 - FN-9239 Improve errors handling - automatic errors reporting

2.1.11
 - FN-9483 Fix bug in order processing and payment creation (wrong tax id number)

2.1.10
 - FN-9354 Improve errors handling

2.1.9
 - FN-9171 Add CRC32 code for widget configuration to force refreshing widget initialization JS script

2.1.8
 - FN-9164 Link all images (Comfino logo, icons) to the external host (Comfino widgets static) to avoid problems with hosting configurations at some websites (403 error)

2.1.7
 - FN-9048 Add a new offer type in Comfino widget: Pay later (PAY_LATER)

2.1.6
 - FN-9017 Update configuration form: add logo and contact information (e-mail and phone to the Comfino support office)

2.1.5
 - FN-8843 Fix bugs in configuration form (widget key retrieving and sandbox settings)

2.1.4
 - FN-8865 Improved module security

2.1.3
 - FN-8790 Code cleanup, changelog update

2.1.2
 - FN-8790 Code cleanup

2.1.1
 - FN-8790 Add a new input field in the module configuration form: API key for test environment
 - FN-8773 Improve notifications endpoint security - add request signature verification

2.1.0
 - Bugs fixing and backend logic simplification
 
2.0.6
 - FN-8658 Unconditional widget key retrieving from API after configuration saving
 - FN-8635 Update frontend templates, update order state names and add Polish translations, update widgets init script
 - FN-8619 Update plugin icon and configuration form, widget key auto-initialization
 - FN-8589 Remove logic for preventing cancellation of accepted orders paid via Comfino
 - FN-8583 Code refactoring - PS coding and security standards implemented

2.0.4
 - FN-8568 Fix bug in payment controller
 - FN-8543 Update Comfino logo used in payment form - use vector format
 - FN-8535 Update styles
 
2.0.3
 - FN-8442 Comfino widget (product card)
 - FN-8428 Update styles - correct font sizes and colors for PrestaShop 1.6
 
2.0.2