@@ -1,5 +1,6 @@
 2.2.1
  - FN-9566 Fix bug in frontend initialization code present in some PS frontend themes
+ - FN-9589 Filter financial products (offers) by cart item category
 
 2.2.0
  - FN-9239 Improve errors handling - automatic errors reporting
